@@ -278,17 +278,18 @@ Tcl_AsyncDelete(
     AsyncHandler *prevPtr, *thisPtr;
 
     /*
+     * Assure early handling of the constraint
+     */
+
+    if (asyncPtr->originThrdId != Tcl_GetCurrentThread()) {
+	panic("Tcl_AsyncDelete: async handler deleted by the wrong thread");
+    }
+
+    /*
      * If we come to this point when TSD's for the current
      * thread have already been garbage-collected, we are
      * in the _serious_ trouble. OTOH, we tolerate calling
      * with already cleaned-up handler list (should we?).
-     */
-
-    /*
-     * Conservatively check the existence of the linked list of
-     * registered handlers, as we may come at this point even
-     * when the TSD's for the current thread have been already
-     * garbage-collected.
      */
 
     Tcl_MutexLock(&tsdPtr->asyncMutex);
